--- a/src/assets/css/base/_variables.scss
+++ b/src/assets/css/base/_variables.scss
@@ -6,7 +6,7 @@
 }
 
 // COLORS
-$body-color: #fff;
+$white: #fff; 
+$dark-green: #04353C;
 $body-bg: #0A545F;
-$btn-bg: #04353C;
-$placeholder: #707070;
+$brown-gray: #707070;
