--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -3,8 +3,9 @@
 @use 'base/_variables.scss'; 
 @use 'base/_mixins.scss';
 
+
 // USE COMPONENTS FOLDER
-// @use 'components/_modals.scss'; 
+@use 'components/_city-cards.scss'; 
 
 // USE LAYOUTS FOLDER
 // @use 'layouts/_header_footer.scss'; 
