start single city page and some changes on the home page

--- a/src/assets/css/base/_base.scss
+++ b/src/assets/css/base/_base.scss
@@ -41,7 +41,8 @@ a {
   }
 }
 
-button {
+button,
+.button {
   background-color: variables.$dark-green;
   color: variables.$white;
   outline: none;
