--- a/src/assets/css/base/_variables.scss
+++ b/src/assets/css/base/_variables.scss
@@ -1,7 +1,27 @@
 @font-face {
     font-family: 'Poppins';
     src: local('Poppins'), url('../font/Poppins-Regular.ttf') format('truetype');
-    font-weight: normal;
+    font-weight: 400;
+    font-style: normal; 
+}
+@font-face {
+    font-family: 'Poppins';
+    src: local('Poppins'), url('../font/Poppins-Light.ttf') format('truetype');
+    font-weight: 300;
+    font-style: normal; 
+}
+
+@font-face {
+    font-family: 'Poppins';
+    src: local('Poppins'), url('../font/Poppins-Medium.ttf') format('truetype');
+    font-weight: 500;
+    font-style: normal; 
+}
+
+@font-face {
+    font-family: 'Poppins';
+    src: local('Poppins'), url('../font/Poppins-SemiBold.ttf') format('truetype');
+    font-weight: 600;
     font-style: normal; 
 }
 
