--- a/src/assets/css/base/_base.scss
+++ b/src/assets/css/base/_base.scss
@@ -11,8 +11,14 @@ body {
   font-family: 'Poppins', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: variables.$body-bg url('../images/page-bg.png') no-repeat;
   color: variables.$white;
+  background: variables.$body-bg url('../images/page-bg.png') no-repeat;
+  background-size: cover;
+  background-position: right;
+  
+  @include mixins.xl {
+    background-position: center;
+  }
 }
 
 .logo {
@@ -33,6 +39,11 @@ body {
       img {
         max-height: 36px;
       }
+
+      &:focus,
+      &:focus-visible {
+        outline: none;  
+      }
   }
  
 }
@@ -46,7 +57,7 @@ body {
     }
   } 
   
-  @include mixins.xl-1600 { 
+  @include mixins.xl-1800 { 
     & {
         padding: 0 200px;
     }
@@ -54,7 +65,6 @@ body {
 }
 
 .content {
-  
   min-height: calc(100vh - 85px);
 
   @include mixins.md { 
@@ -93,6 +103,11 @@ input {
   border-radius: 10px;
   font-family: "Poppins", sans-serif;
 
+  &:focus,
+  &:focus-visible {
+    outline: none;  
+  }
+
   &, &::placeholder {
     color: variables.$brown-gray;
     font-size: 14px;
@@ -105,6 +120,16 @@ input {
 
 ul {
   list-style-type: none;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+  &-track {
+    background-color: variables.$scrollbar-track;
+  }
+  &-thumb {
+    background-color: variables.$scrollbar; 
+  }
 }
 
 footer {
